# tablion

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/instructions/: commit-messages.md
documentation/: build.md  feature-ideas.md  feature-idee-zusatzspalten-filetree.md  files.md  pane-controller-refactor-plan.md
packaging/: build-translations.sh  build.sh  tablion-file-manager.spec  tablion.desktop
resources/translations/: tablion_de_DE.qm  tablion_en_US.qm
scripts/: rebind_kde_meta_e.py
src/: debug_log.py  localization.py  main.py  single_application.py  version_info.py
src/backends/local/: __init__.py  local_backend.py
src/controllers/: group_controller.py  pane_controller.py  remote_drive_controller.py
src/controllers/view_adapters/: __init__.py  icon_view_adapter.py  tree_view_adapter.py
src/domain/filesystem/: __init__.py  backend.py  entry.py  location.py
src/models/: editor_settings.py  file_operations.py  file_system_model.py  local_office_web_session_store.py  navigator.py  pane_tab_state.py  remote_connection_settings.py  remote_drive_settings.py  remote_external_drag_model.py  remote_file_tree_model.py  remote_mount_settings.py
src/translations/: README.md  tablion_de_DE.ts  tablion_en_US.ts
src/ui/: about.ui  main.ui  manageTabGoups.ui  pane.ui  settings.ui
src/utils/: batch_rename.py  open_with.py  xdg_defaults.py
src/widgets/: about_dialog.py  batch_rename_dialog.py  group_workspace_widget.py  icon_picker_dialog.py  manage_tab_groups_dialog.py  path_bar.py  properties_dialog.py  settings_dialog.py
(+31 files in other folders)
