[project]
# RPM-Name (Name der Anwendung)
name = "tablion-file-manager"

# RPM-Version (Versionsnummer der Anwendung)
version = "0.3.0"

# RPM-Description (Beschreibung)
description = " Dateimanager mit Tabgruppen, Multi-View und smarter Dateiorganisation"

dependencies = ["PySide6", "send2trash"]
authors = [{name = "Antonio Cambule"}]

[project.scripts]
tablion-file-manager = "main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ui" = ["*.ui"]

[tool.setuptools.data-files]
"resources/translations" = ["resources/translations/*.qm"]

[tool.rpm]
# RPM-Release-Nummer (Buildnummer)
release = "1"